<resources>
    <string name="app_name">Registration</string>
    <string name="log_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="name">Название</string>
    <string name="OK">ОК</string>
    <string name="back">Назад</string>
    <string name="eat">еда</string>
    <string name="water">вода</string>
    <string name="medications">лекарства</string>
    <string name="walk">прогулка</string>
    <string name="combing">вычесывание</string>
    <string name="bathing">купание</string>
    <string name="input_nickname">Ввод Клички</string>
    <string name="input_age">Ввод возраста</string>
    <string name="input_weight">Ввод веса</string>
    <string name="pet_reg">Регистрация питомца</string>
    <string name="setting_up_notifications">Настройка уведомлений</string>
    <string name="time">время</string>
    <string name="pets">ПИТОМЦЫ</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="add_pet">Добавить</string>
    <string name="right">Вперед</string>
    <string name="left">Назад</string>
<<<<<<< HEAD
    <string name="pet">Питомцы</string>
    <string name="edit">изменить</string>
    <string name="delete">удалить</string>
    <string name="name_pet">Кличка</string>
    <string name="age">Возраст</string>
    <string name="weight">Вес</string>
    <string name="notice">настроить уведомления</string>
    <string name="back">назад</string>
=======
    <string name="time1">7:00</string>
    <string name="time2">22:00</string>
    <string name="viewing_tips">Просмотр советов</string>
    <string name="teeth">Как лечить зубы</string>
>>>>>>> 7b3c872539d63d882f5317ebb690e751e485eb5f
</resources>